--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
 
       <div style="margin: 20px 0;">
         <button class="btn-primary" onclick="logout()">ログアウト</button>
-        <button id="admin-link" class="btn-danger hidden" onclick="location.href='/admin.html'">管理者画面</button>
+        <button id="admin-link" class="btn-danger hidden" onclick="location.href='/admin'">管理者画面</button>
       </div>
 
       <div class="records">
