--- a/public/admin.html
+++ b/public/admin.html
@@ -4,62 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>管理者画面 - 勤怠管理</title>
+  <link rel="stylesheet" href="/styles.css">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-      padding: 20px;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      background: white;
-      border-radius: 10px;
-      padding: 30px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-    }
-    h1 { color: #333; margin-bottom: 10px; }
     .nav { margin-bottom: 20px; }
     .nav a {
       display: inline-block;
       padding: 10px 20px;
-      background: #667eea;
+      background: var(--primary);
       color: white;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: var(--radius);
       margin-right: 10px;
+      transition: all 0.2s;
     }
-    .nav a:hover { background: #5568d3; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { padding: 12px; text-align: left; border-bottom: 1px solid #ddd; }
-    th { background: #667eea; color: white; }
-    tr:hover { background: #f5f5f5; }
-    .badge {
-      padding: 4px 8px;
-      border-radius: 4px;
-      font-size: 12px;
-      font-weight: bold;
-    }
-    .badge-admin { background: #dc3545; color: white; }
-    .badge-user { background: #28a745; color: white; }
-    button {
-      padding: 8px 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-    .btn-primary { background: #667eea; color: white; }
-    .btn-primary:hover { background: #5568d3; }
+    .nav a:hover { background: var(--primary-dark); transform: translateY(-2px); }
     .section { margin-bottom: 40px; }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>🔐 管理者画面</h1>
-    <p id="admin-info">読み込み中...</p>
+    <div class="user-info">
+      <p id="admin-info">読み込み中...</p>
+    </div>
 
     <div class="nav">
       <a href="/">ホームに戻る</a>
@@ -69,7 +36,8 @@
 
     <div class="section">
       <h2>👥 ユーザー一覧</h2>
-      <table id="users-table">
+      <div class="table-wrapper">
+        <table id="users-table">
         <thead>
           <tr>
             <th>ID</th>
@@ -83,11 +51,13 @@
         </thead>
         <tbody id="users-body"></tbody>
       </table>
+      </div>
     </div>
 
     <div class="section">
       <h2>📊 勤怠記録（最新100件）</h2>
-      <table id="attendance-table">
+      <div class="table-wrapper">
+        <table id="attendance-table">
         <thead>
           <tr>
             <th>ID</th>
@@ -101,6 +71,7 @@
         </thead>
         <tbody id="attendance-body"></tbody>
       </table>
+      </div>
     </div>
   </div>
 
