--- a/public/admin.html
+++ b/public/admin.html
@@ -4,38 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>管理者画面 - 勤怠管理</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="/styles.css">
-  <style>
-    .nav { margin-bottom: 20px; }
-    .nav a {
-      display: inline-block;
-      padding: 10px 20px;
-      background: var(--primary);
-      color: white;
-      text-decoration: none;
-      border-radius: var(--radius);
-      margin-right: 10px;
-      transition: all 0.2s;
-    }
-    .nav a:hover { background: var(--primary-dark); transform: translateY(-2px); }
-    .section { margin-bottom: 40px; }
-  </style>
 </head>
 <body>
+  <!-- Dark Mode Toggle -->
+  <div class="theme-toggle" onclick="toggleTheme()" title="テーマ切り替え">
+    <i class="fas fa-moon" id="theme-icon"></i>
+  </div>
+
   <div class="container">
-    <h1>🔐 管理者画面</h1>
+    <h1><i class="fas fa-user-shield"></i> 管理者画面</h1>
     <div class="user-info">
-      <p id="admin-info">読み込み中...</p>
+      <div class="user-avatar"><i class="fas fa-crown"></i></div>
+      <div class="user-details">
+        <p id="admin-info">読み込み中...</p>
+        <p class="user-role">管理者</p>
+      </div>
     </div>
 
     <div class="nav">
-      <a href="/">ホームに戻る</a>
-      <a href="#" onclick="loadUsers()">ユーザー一覧を更新</a>
-      <a href="#" onclick="loadAllAttendance()">勤怠記録を更新</a>
+      <a href="/">
+        <i class="fas fa-home"></i> ホームに戻る
+      </a>
+      <a href="#" onclick="loadUsers()">
+        <i class="fas fa-sync-alt"></i> ユーザー一覧を更新
+      </a>
+      <a href="#" onclick="loadAllAttendance()">
+        <i class="fas fa-sync-alt"></i> 勤怠記録を更新
+      </a>
     </div>
 
     <div class="section">
-      <h2>👥 ユーザー一覧</h2>
+      <h2 class="section-title"><i class="fas fa-users"></i> ユーザー一覧</h2>
       <div class="table-wrapper">
         <table id="users-table">
         <thead>
@@ -55,7 +56,7 @@
     </div>
 
     <div class="section">
-      <h2>📊 勤怠記録（最新100件）</h2>
+      <h2 class="section-title"><i class="fas fa-chart-bar"></i> 勤怠記録（最新100件）</h2>
       <div class="table-wrapper">
         <table id="attendance-table">
         <thead>
@@ -76,6 +77,33 @@
   </div>
 
   <script>
+    // Dark Mode Toggle
+    function toggleTheme() {
+      const html = document.documentElement;
+      const currentTheme = html.getAttribute('data-theme');
+      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+      const icon = document.getElementById('theme-icon');
+
+      html.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+
+      if (newTheme === 'dark') {
+        icon.className = 'fas fa-sun';
+      } else {
+        icon.className = 'fas fa-moon';
+      }
+    }
+
+    // Load saved theme
+    (function() {
+      const savedTheme = localStorage.getItem('theme') || 'light';
+      const icon = document.getElementById('theme-icon');
+      document.documentElement.setAttribute('data-theme', savedTheme);
+      if (savedTheme === 'dark') {
+        icon.className = 'fas fa-sun';
+      }
+    })();
+
     async function checkAdmin() {
       try {
         const res = await fetch('/api/auth/me');
@@ -90,7 +118,7 @@
           location.href = '/';
           return false;
         }
-        document.getElementById('admin-info').textContent = `管理者: ${user.username}`;
+        document.getElementById('admin-info').textContent = user.full_name || user.username;
         return true;
       } catch (error) {
         alert('認証エラー');
