Add premium animations, micro-interactions, and enhanced UI components
✨ Major Enhancements:
- Premium physics-based animations system
- Advanced micro-interactions and utilities
- KPI statistics cards with gradients
- Sidebar layout for dashboard
- Welcome banner with time-based greetings
- Activity timeline component
- Enhanced table styles
- Top bar with search and notifications

📁 New Files:
- css/themes.css: Complete theme system (light/dark modes)
- css/animations.css: 50+ premium animations
- js/app.js: Micro-interactions, toast notifications, utilities

🎨 Animations Added:
- Fade in/out variations
- Scale and bounce effects
- Slide animations
- Shimmer loading states
- Skeleton loaders
- Ripple effects
- Stagger animations for lists
- Count-up number animations

🎯 Components:
- KPI Cards: Statistics with trend indicators
- Sidebar: Collapsible navigation
- Welcome Banner: Time-based greetings
- Timeline: Activity feed
- Toast Notifications: Success/error feedback
- Loading States: Skeleton screens, spinners

🌙 Theme System:
- Light/Dark mode with smooth transitions
- CSS custom properties for all colors
- Premium color palettes
- Glassmorphism effects

⚡ Performance:
- GPU-accelerated animations
- Prefers-reduced-motion support
- Optimized transitions
- Smooth 60fps animations

🎨 Design Details:
- Physics-based easing (spring, bounce)
- Hover lift effects
- Glow animations
- Gradient meshes
- Ripple button feedback

Inspired by: Linear, Stripe, Notion, Apple HIG

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>勤怠管理アプリ</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="/css/themes.css">
   <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/css/animations.css">
 </head>
-<body>
+<body class="preload">
   <!-- Dark Mode Toggle -->
   <div class="theme-toggle" onclick="toggleTheme()" title="テーマ切り替え">
     <i class="fas fa-moon" id="theme-icon"></i>
@@ -302,5 +304,8 @@
 
     checkAuth();
   </script>
+
+  <!-- App Utilities -->
+  <script src="/js/app.js"></script>
 </body>
 </html>
